# htmx-leptos-axum

./: .gitignore  Cargo.toml  run-debug.sh  tailwind.config.js
migrations/01-add-device-tables/: down.sql  up.sql
src/: db.rs  devices.rs  lib.rs  main.rs
