[package]
name = "htmx-leptos-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
include_dir = "0.7.3"
lazy_static = "1.4.0"
leptos = { version = "0.4.2"}
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = { version = "1.1.0-alpha.2", features = ["from-directory"] }
serde = { version = "1.0.169", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
